# tcc_ai

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: context-architect.agent.md
.github/skills/regime-detection-validation/: SKILL.md
.github/workflows/: test.yml
.session/: SESSION_LOG.md
audit/: canonical_n_positives.json
configs/: default.yaml  sagemaker_ae_only.yaml  sagemaker_ae_only_W6_d7_K4_b1.yaml  stage1_winner.yaml  stage2_winner.yaml
configs/baselines_op/: W6_d7_K4.yaml
configs/sweep/: W12_d6_K3.yaml  W12_d6_K4.yaml  W12_d6_K5.yaml  W12_d7_K3.yaml  W12_d7_K4.yaml  W12_d7_K5.yaml  W12_d8_K3.yaml  W12_d8_K4.yaml  W12_d8_K5.yaml  W12_d9_K3.yaml  W12_d9_K4.yaml  W12_d9_K5.yaml  W24_d6_K3.yaml  W24_d6_K4.yaml  W24_d6_K5.yaml  W24_d7_K3.yaml  W24_d7_K4.yaml  W24_d7_K5.yaml  W24_d8_K3.yaml  W24_d8_K4.yaml  W24_d8_K5.yaml  W24_d9_K3.yaml  W24_d9_K4.yaml  W24_d9_K5.yaml  W6_d6_K3.yaml  W6_d6_K4.yaml  W6_d6_K5.yaml  W6_d7_K3.yaml  W6_d7_K4.yaml  W6_d7_K5.yaml  W6_d8_K3.yaml  W6_d8_K4.yaml  W6_d8_K5.yaml  W6_d9_K3.yaml  W6_d9_K4.yaml  W6_d9_K5.yaml
configs/sweep_backfill/: W24_d8_K5.yaml  W24_d9_K3.yaml  W24_d9_K4.yaml  W24_d9_K5.yaml  W6_d6_K3.yaml  W6_d6_K4.yaml  W6_d6_K5.yaml  W6_d7_K3.yaml  W6_d7_K4.yaml  W6_d7_K5.yaml  W6_d8_K3.yaml  W6_d8_K4.yaml  W6_d8_K5.yaml  W6_d9_K3.yaml  W6_d9_K4.yaml  W6_d9_K5.yaml
configs/sweep_stage1/: lr1e-03_drop00.yaml  lr1e-03_drop10.yaml  lr1e-03_drop20.yaml  lr1e-03_drop30.yaml  lr1e-04_drop00.yaml  lr1e-04_drop10.yaml  lr1e-04_drop20.yaml  lr1e-04_drop30.yaml  lr3e-04_drop00.yaml  lr3e-04_drop10.yaml  lr3e-04_drop20.yaml  lr3e-04_drop30.yaml
docs/: PLAN_consolidated_v3.md  PLAN_gap_remediation.md  PLAN_implementation_v2.md  PLAN_itransformer_repo.md  api_reference.md  deploy_aws.md  pre_analysis_plan.md  skills-index.md
figures/: .canonical_hashes.json  build_all_figures.py
notebooks/: 00_eda.ipynb  01_embedding_analysis.ipynb
outputs/: HANDOFF_TO_WRITING_AGENT.md
outputs/docs/: notation.md  preprocessing.md  protocol.md
outputs/tables/: b1_distribution_shift.csv  bootstrap_stability.csv  c1_arithmetic_audit.csv  falsification_summary.csv  mlflow_stage_results.csv  nber_positive_count.json  phase_c_canonical_pca_kmeans.csv  phase_c_locked_all_cells.csv  phase_c_locked_best_cell.csv
plan/: feature-itransformer-thesis-1.md  panel-remediation-plan.md  thesis-reframe-outline.md
sagemaker/: launch_training.py  train_entrypoint.py
scripts/: agent1_audit_compute.py  agent1_v2_compute.py  agent1_v4_compute.py  aggregate_ablation.py  audit_canonical_n_positives.py  compile_phase_c_final.py  confound_check.py  download_data.py  export_results.py  generate_sweep_configs.py  generate_sweep_stage1.py  log_environment.py  make_diagnostic_tables.py  pick_stage1_winner.py  pick_stage2_winner.py  pull_nber.py  run_baselines.py  run_clustering_ablation.py  run_falsification.py  run_hdbscan_param_sweep.py  run_hdphmm_baseline.py  run_phase_c_comparison.py  run_phase_c_locked.py  run_phase_e_encoders.py  run_single.py  run_stage1_bg.sh  run_sweep.py  sprint1_metrics_and_stress.py  sprint2_consensus_clustering.py  sprint3_macro_profiles_tiers.py  sprint4_f10_granger.py  sprint4_f2_bai_perron.py  sprint5_f3_window_sensitivity.py  sprint6_f4_infonce.py  sprint7_f5_domain_adaptation.py  sprint8_part1.py  sprint8_part2.py
scripts/analysis/: export.sh
scripts/configs/: gen_stage1.sh  gen_stage2.sh
scripts/data/: download.sh  env_log.sh  pull_nber.sh
scripts/eval/: ablation.sh  bai_perron_headline.sh  baselines.sh  cluster_stability.sh  confound.sh  falsify.sh  hdbscan_sweep.sh  hdphmm.sh  multi_label.sh
scripts/shell/: run_locked.sh  run_stage1_bg.sh
scripts/train/: single.sh  sweep.sh
scripts/winners/: stage1.sh  stage2.sh
sm_jobs/: launch_training.py  train_entrypoint.py
src/tcc_itransformer/: __init__.py  config.py  seed.py
src/tcc_itransformer/cli/: __init__.py  main.py
src/tcc_itransformer/data/: __init__.py  dataset.py  external_labels.py  fred_md.py  preprocessing.py  (+2 more)
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py  test_sagemaker_entrypoint.py  test_training.py
tests/quality/: conftest.py  test_clustering_quality.py  test_embedding_quality.py
tests/unit/: test_baselines.py  test_clustering.py  test_config.py  test_data.py  test_density_pipeline.py  test_effective_sample_size.py  test_embedding_quality.py  test_explain.py  test_losses.py  test_misc_gaps.py  test_model.py  test_preprocessing.py  test_regime_validation.py  test_stationarity.py  test_statistical.py
(+51 files in other folders)
