[project]
name = "tcc-itransformer"
version = "0.1.0"
description = "iTransformer autoencoder for FRED-MD economic regime identification"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TCC Team", email = "tcc@maua.br"},
]

[project.urls]
Repository = "https://github.com/compsci-squad/tcc"
Documentation = "docs/"

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.3.0,<0.9.0",
]

dependencies = [
    "torch>=2.2.0,<2.5.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.1.0,<2.3.0",
    "scikit-learn>=1.4.0,<1.6.0",
    "scipy>=1.12.0,<1.15.0",
    "matplotlib>=3.8.0,<3.10.0",
    "seaborn>=0.13.0,<0.14.0",
    "mlflow>=2.10.0,<2.18.0",
    "pydantic>=2.6.0,<2.10.0",
    "pyyaml>=6.0,<7.0",
    "statsmodels>=0.14.0,<0.15.0",
    "safetensors>=0.4.0,<0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: marks tests that require GPU",
    "slow: marks slow tests",
    "quality: marks scientific quality gate tests",
]
addopts = "-ra -q -m 'not quality'"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
