[project]
name = "tcc-itransformer"
version = "0.1.0"
description = "iTransformer autoencoder for FRED-MD economic regime identification"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TCC Team", email = "tcc@maua.br"},
]
dependencies = [
    "torch>=2.2.0,<2.5.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.1.0,<2.3.0",
    "scikit-learn>=1.4.0,<1.6.0",
    "scipy>=1.12.0,<1.15.0",
    "matplotlib>=3.8.0,<3.10.0",
    "seaborn>=0.13.0,<0.14.0",
    "mlflow>=2.10.0,<2.18.0",
    "pydantic>=2.6.0,<2.10.0",
    "pyyaml>=6.0,<7.0",
    "statsmodels>=0.14.0,<0.15.0",
    "safetensors>=0.4.0,<0.5.0",
    # Density-based clustering pipeline (pre_projeto §4.3 — main method)
    "hdbscan>=0.8.33,<0.9.0",
    "umap-learn>=0.5.5,<0.6.0",
    # Structural break detection (Bai-Perron alignment, §4.4)
    "ruptures>=1.1.9,<2.0.0",
    # AWS / S3 panel ingestion (deploy_aws.md)
    "boto3>=1.34.0,<2.0.0",
    "s3fs>=2024.3.0",
    "pyarrow>=15.0.0,<18.0.0",
    "joblib>=1.3.0,<2.0.0",
    "httpx>=0.28.1",
    "sagemaker>=2.230,<3",
    "typer>=0.12.0,<0.16.0",
    "ruff>=0.8.6",
    "polars>=1.41.0",
]

[project.scripts]
tcc = "tcc_itransformer.cli.main:app"

[project.urls]
Repository = "https://github.com/compsci-squad/tcc"

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.3.0,<0.9.0",
]
# External pseudo-label series for multi-label validation panel (Phase C1).
# Pull RECPROUSM156N, SAHMREALTIME, CFNAIMA3, USALOLITOAASTSAM from FRED.
labels = [
    "fredapi>=0.5.0,<0.6.0",
]

# Bayesian non-parametric baselines (sticky/SDHDP-HMM) — local-only, not in SageMaker image.
# Heavy JAX dependency intentionally isolated from training-time deps.
baselines = [
    "dynamax>=0.1.5,<0.2.0",
    "jax>=0.4.20,<0.5.0",
    "jaxlib>=0.4.20,<0.5.0",
    # dynamax pulls fastprogress which imports IPython unconditionally.
    "ipython>=8.0,<9.0",
]

# Phase E: alternative encoder battery.
# momentfm PyPI (<=0.1.4) pins transformers==4.33.3 — v0.1.5 on GitHub uses >=4.54.1.
# Install with: uv sync --extra phase_e
# MOIRAI (uni2ts) is not on PyPI — install separately after uv sync:
#   uv run pip install git+https://github.com/SalesforceAIResearch/uni2ts.git
phase_e = [
    "momentfm @ git+https://github.com/moment-timeseries-foundation-model/moment.git",
    "ts2vec>=0.1.0",
    "transformers>=4.54.1,<5.0.0",
    "hmmlearn>=0.3.0,<0.4.0",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: marks tests that require GPU",
    "slow: marks slow tests",
    "quality: marks scientific quality gate tests",
]
addopts = "-ra -q -m 'not quality'"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "boto3>=1.42.91",
    "sagemaker>=2.230,<3",
]
